# dusk

./: .gitignore  .gitlab-ci.yml  .nvimrc  .rgignore  CMakeLists.txt  Debug.sh  README.md  build.sh  ccls_file_gen.sh  clean.sh  compile_commands.json  debug.sh  deps.sh  filetest.txt  gen_parser.py  mkdocs.yml  monomorphization.ds  ptest.py  run.sh  test.ds
AoC/day1/: day1.ds  day1.py
AoC/day10/: day10.py
AoC/day11/: day11.py
AoC/day12/: day12.py
AoC/day13/: day13.py
AoC/day14/: day14.py
AoC/day15/: day15.py
AoC/day16/: day16.ds  day16.py
AoC/day2/: day2.ds  day2.py
AoC/day3/: day3.ds  day3.py
AoC/day4/: day4.ds  day4.py
AoC/day5/: day5.py
AoC/day6/: day6.py
AoC/day7/: day7.py
AoC/day8/: day8.py
AoC/day9/: day9.py
docs/: index.md  license.md
docs/standard_library/: base.md  bignums.md  io.md  math.md  types.md  vectors.md
docs/standard_types/: array_types.md  floating_types.md  integer_types.md  string_types.md  struct_types.md
docs/syntax/: functions.md  general.md  structs.md
dusklibs/: bignum.ds  linkedlists.ds  math.ds  stdio.ds  stdlib.ds  types.ds  vector.ds
example_outputs/: arrays.txt  casting.txt  scope.txt  structs.txt  vectors.txt
examples/: arrays.ds  bigfloats.ds  bigints.ds  casting.ds  functions.ds  io.ds  linkedlist.ds  maths.ds  monomorphization.ds  refcounting.ds  scope.ds  structs.ds  types.ds  vectors.ds
examples/example_outputs/: bigfloats.txt  bigints.txt  functions.txt  io.txt  linkedlist.txt  maths.txt  monomorphization.txt  refcounting.txt  test.txt  types.txt  vectors.txt
include/: ast.hh  expression.hh  function.hh  helpers.hh  statement.hh  struct.hh
public/: 404.html  index.html  search.html  sitemap.xml  style.css
public/license/: index.html
public/search/: search_index.json
public/standard_library/base/: index.html
public/standard_library/bignums/: index.html
public/standard_library/io/: index.html
public/standard_library/math/: index.html
public/standard_library/types/: index.html
public/standard_library/vectors/: index.html
public/standard_types/array_types/: index.html
public/standard_types/floating_types/: index.html
public/standard_types/integer_types/: index.html
public/standard_types/string_types/: index.html
public/standard_types/struct_types/: index.html
public/syntax/functions/: index.html
public/syntax/general/: index.html
public/syntax/structs/: index.html
src/: ast.cc  ast.hh  dusk.cc  duskio.cc  duskmath.cc  duskvec.cc  expression.cc  expression.hh  function.cc  function.hh  grammar.y  helpers.cc  parser.h  parser.output  statement.cc  statement.hh  stdlib.cc  struct.cc  tokens.l
stdlib/: bigint.cc  bignum.cc  duskio.cc  duskmath.cc  duskvec.cc  stdlib.cc
